--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "spheres",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "build": "webpack"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.0",
